--- a/feature_upload_aws.ipynb
+++ b/feature_upload_aws.ipynb
@@ -29,8 +29,8 @@
     "# Initialize the S3 client\n",
     "s3 = boto3.client(\n",
     "    's3',\n",
-    "    aws_access_key_id= os.getenv('AWS_ACCESS_KEY_ID'),\n",
-    "    aws_secret_access_key=os.getenv('AWS_SECRET_ACCESS_KEY'),\n",
+    "    aws_access_key_id= os.environ.getenv('AWS_ACCESS_KEY_ID'),\n",
+    "    aws_secret_access_key=os.environ.getenv('AWS_SECRET_ACCESS_KEY'),\n",
     ")\n",
     "\n",
     "# Upload the file\n",
