--- a/feature_upload_aws.ipynb
+++ b/feature_upload_aws.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "721420e2",
    "metadata": {},
    "outputs": [
@@ -29,8 +29,8 @@
     "# Initialize the S3 client\n",
     "s3 = boto3.client(\n",
     "    's3',\n",
-    "    aws_access_key_id= os.environ.getenv('AWS_ACCESS_KEY_ID'),\n",
-    "    aws_secret_access_key=os.environ.getenv('AWS_SECRET_ACCESS_KEY'),\n",
+    "    aws_access_key_id= os.environ.get('AWS_ACCESS_KEY_ID'),\n",
+    "    aws_secret_access_key=os.environ.get('AWS_SECRET_ACCESS_KEY'),\n",
     ")\n",
     "\n",
     "# Upload the file\n",
