--- a/extract_data.ipynb
+++ b/extract_data.ipynb
@@ -2,7 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
+   "id": "7afd69dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-04-27 13:39:31\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "# Given JSON data\n",
+    "data = {\n",
+    "    \"coord\": {\n",
+    "        \"lon\": 67.0207,\n",
+    "        \"lat\": 24.8547\n",
+    "    },\n",
+    "    \"list\": [\n",
+    "        {\n",
+    "            \"main\": {\n",
+    "                \"aqi\": 4\n",
+    "            },\n",
+    "            \"components\": {\n",
+    "                \"co\": 105.36,\n",
+    "                \"no\": 0,\n",
+    "                \"no2\": 0.11,\n",
+    "                \"o3\": 67.1,\n",
+    "                \"so2\": 0.25,\n",
+    "                \"pm2_5\": 38.69,\n",
+    "                \"pm10\": 136.59,\n",
+    "                \"nh3\": 0\n",
+    "            },\n",
+    "            \"dt\": 1745761171\n",
+    "        }\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "# Extracting the Unix timestamp\n",
+    "timestamp = data[\"list\"][0][\"dt\"]\n",
+    "\n",
+    "# Converting Unix timestamp to datetime\n",
+    "dt_object = datetime.datetime.utcfromtimestamp(timestamp)\n",
+    "\n",
+    "# Print the formatted date and time\n",
+    "print(dt_object.strftime(\"%Y-%m-%d %H:%M:%S\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "f72f3d64",
    "metadata": {},
    "outputs": [],
@@ -14,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "983d9f0c",
    "metadata": {},
    "outputs": [
@@ -54,7 +107,7 @@
     "            'so2': components['so2'],\n",
     "            'pm2_5': components['pm2_5'],\n",
     "            'pm10': components['pm10'],\n",
-    "            'nh3': components['nh3'],\n",
+    "            'nh3': components['nh3']\n",
     "        }\n",
     "    else:  # AQI data is missing\n",
     "        record = {\n",
@@ -89,14 +142,12 @@
     "# Convert to DataFrame\n",
     "df = pd.DataFrame(records)\n",
     "\n",
-    "# Save to CSV\n",
-    "df.to_csv('aqi_weather_data.csv', index=False)\n",
-    "print(\"CSV file created: aqi_weather_data.csv\")\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "id": "acd7f75f",
    "metadata": {},
    "outputs": [
@@ -104,43 +155,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   aqi_index  aqi_timestamp       co    no    no2     o3    so2  pm2_5  \\\n",
-      "0        4.0   1.729624e+09  1201.63  0.01  45.24  41.13   8.82  68.43   \n",
-      "1        4.0   1.729627e+09  1388.55  0.05  57.58  26.46   8.94  71.22   \n",
-      "2        5.0   1.729631e+09  1468.66  0.06  58.26  21.99  10.01  76.47   \n",
-      "3        5.0   1.729634e+09  1375.20  0.01  48.67  26.82  10.73  79.89   \n",
-      "4        4.0   1.729638e+09  1001.36  0.00  30.85  43.99   8.82  72.51   \n",
+      "   aqi_index       co    no    no2     o3    so2  pm2_5    pm10    nh3  \\\n",
+      "0        4.0  1201.63  0.01  45.24  41.13   8.82  68.43  112.67  11.78   \n",
+      "1        4.0  1388.55  0.05  57.58  26.46   8.94  71.22  113.28  10.39   \n",
+      "2        5.0  1468.66  0.06  58.26  21.99  10.01  76.47  117.74  10.64   \n",
+      "3        5.0  1375.20  0.01  48.67  26.82  10.73  79.89  121.13  11.02   \n",
+      "4        4.0  1001.36  0.00  30.85  43.99   8.82  72.51  111.48   8.87   \n",
       "\n",
-      "     pm10    nh3  temperature_2m  relative_humidity_2m  precipitation  \\\n",
-      "0  112.67  11.78            27.3                  81.0            0.0   \n",
-      "1  113.28  10.39            26.8                  85.0            0.0   \n",
-      "2  117.74  10.64            26.2                  90.0            0.0   \n",
-      "3  121.13  11.02            26.0                  94.0            0.0   \n",
-      "4  111.48   8.87            26.0                  94.0            0.0   \n",
+      "   temperature_2m  ...  precipitation  wind_speed_10m  wind_direction_10m  \\\n",
+      "0            27.3  ...            0.0            11.7               314.0   \n",
+      "1            26.8  ...            0.0            13.2               307.0   \n",
+      "2            26.2  ...            0.0            15.8               323.0   \n",
+      "3            26.0  ...            0.0            15.1               331.0   \n",
+      "4            26.0  ...            0.0            13.7               322.0   \n",
       "\n",
-      "   wind_speed_10m  wind_direction_10m  surface_pressure  dew_point_2m  \\\n",
-      "0            11.7               314.0            1011.3          23.8   \n",
-      "1            13.2               307.0            1011.2          24.0   \n",
-      "2            15.8               323.0            1011.0          24.4   \n",
-      "3            15.1               331.0            1010.9          24.9   \n",
-      "4            13.7               322.0            1011.0          24.9   \n",
+      "   surface_pressure  dew_point_2m  apparent_temperature  shortwave_radiation  \\\n",
+      "0            1011.3          23.8                  31.5                  0.0   \n",
+      "1            1011.2          24.0                  30.9                  0.0   \n",
+      "2            1011.0          24.4                  30.3                  0.0   \n",
+      "3            1010.9          24.9                  30.5                  0.0   \n",
+      "4            1011.0          24.9                  30.6                  0.0   \n",
       "\n",
-      "   apparent_temperature  shortwave_radiation  et0_fao_evapotranspiration  \n",
-      "0                  31.5                  0.0                        0.03  \n",
-      "1                  30.9                  0.0                        0.02  \n",
-      "2                  30.3                  0.0                        0.02  \n",
-      "3                  30.5                  0.0                        0.00  \n",
-      "4                  30.6                  0.0                        0.00  \n"
+      "   et0_fao_evapotranspiration        date      time  \n",
+      "0                        0.03  2024-10-22  19:00:00  \n",
+      "1                        0.02  2024-10-22  20:00:00  \n",
+      "2                        0.02  2024-10-22  21:00:00  \n",
+      "3                        0.00  2024-10-22  22:00:00  \n",
+      "4                        0.00  2024-10-22  23:00:00  \n",
+      "\n",
+      "[5 rows x 21 columns]\n"
      ]
     }
    ],
    "source": [
-    "print(df.head())"
+    "# Convert 'aqi_timestamp' to datetime and extract date and time, with NaN handling\n",
+    "df['date'] = df['aqi_timestamp'].apply(lambda x: datetime.datetime.utcfromtimestamp(x).strftime('%Y-%m-%d') if pd.notna(x) else None)\n",
+    "df['time'] = df['aqi_timestamp'].apply(lambda x: datetime.datetime.utcfromtimestamp(x).strftime('%H:%M:%S') if pd.notna(x) else None)\n",
+    "\n",
+    "# Print the result\n",
+    "\n",
+    "df.drop(columns=['aqi_timestamp'], inplace=True)\n",
+    "print(df.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
+   "id": "6e6e24f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV file created: aqi_weather_data.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save to CSV\n",
+    "df.to_csv('aqi_weather_data.csv', index=False)\n",
+    "print(\"CSV file created: aqi_weather_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "d9ff493b",
    "metadata": {},
    "outputs": [
@@ -148,59 +228,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      aqi_index  aqi_timestamp       co    no    no2     o3    so2  pm2_5  \\\n",
-      "0           4.0   1.729624e+09  1201.63  0.01  45.24  41.13   8.82  68.43   \n",
-      "1           4.0   1.729627e+09  1388.55  0.05  57.58  26.46   8.94  71.22   \n",
-      "2           5.0   1.729631e+09  1468.66  0.06  58.26  21.99  10.01  76.47   \n",
-      "3           5.0   1.729634e+09  1375.20  0.01  48.67  26.82  10.73  79.89   \n",
-      "4           4.0   1.729638e+09  1001.36  0.00  30.85  43.99   8.82  72.51   \n",
-      "...         ...            ...      ...   ...    ...    ...    ...    ...   \n",
-      "4333        4.0   1.745251e+09   125.66  0.00   0.08  89.66   0.22  36.13   \n",
-      "4334        4.0   1.745255e+09   125.84  0.00   0.08  89.68   0.23  36.91   \n",
-      "4335        4.0   1.745608e+09   113.41  0.00   0.11  61.93   0.43  38.76   \n",
-      "4336        4.0   1.745653e+09   113.63  0.01   0.05  72.76   0.43  44.26   \n",
-      "4337        4.0   1.745654e+09   113.63  0.01   0.05  72.76   0.43  44.26   \n",
+      "      aqi_index       co    no    no2     o3    so2  pm2_5    pm10    nh3  \\\n",
+      "0           4.0  1201.63  0.01  45.24  41.13   8.82  68.43  112.67  11.78   \n",
+      "1           4.0  1388.55  0.05  57.58  26.46   8.94  71.22  113.28  10.39   \n",
+      "2           5.0  1468.66  0.06  58.26  21.99  10.01  76.47  117.74  10.64   \n",
+      "3           5.0  1375.20  0.01  48.67  26.82  10.73  79.89  121.13  11.02   \n",
+      "4           4.0  1001.36  0.00  30.85  43.99   8.82  72.51  111.48   8.87   \n",
+      "...         ...      ...   ...    ...    ...    ...    ...     ...    ...   \n",
+      "4335        4.0   113.41  0.00   0.11  61.93   0.43  38.76  129.78   0.00   \n",
+      "4336        4.0   113.63  0.01   0.05  72.76   0.43  44.26  161.20   0.00   \n",
+      "4337        4.0   113.63  0.01   0.05  72.76   0.43  44.26  161.20   0.00   \n",
+      "4338        4.0   113.97  0.01   0.07  68.93   0.48  44.69  162.71   0.00   \n",
+      "4339        4.0   109.04  0.01   0.06  67.06   0.27  44.82  155.90   0.00   \n",
       "\n",
-      "        pm10    nh3  temperature_2m  relative_humidity_2m  precipitation  \\\n",
-      "0     112.67  11.78           27.30                  81.0            0.0   \n",
-      "1     113.28  10.39           26.80                  85.0            0.0   \n",
-      "2     117.74  10.64           26.20                  90.0            0.0   \n",
-      "3     121.13  11.02           26.00                  94.0            0.0   \n",
-      "4     111.48   8.87           26.00                  94.0            0.0   \n",
-      "...      ...    ...             ...                   ...            ...   \n",
-      "4333  156.90   0.15             NaN                   NaN            NaN   \n",
-      "4334  159.14   0.14             NaN                   NaN            NaN   \n",
-      "4335  129.78   0.00           27.30                  81.0            0.0   \n",
-      "4336  161.20   0.00           40.09                  24.0            0.0   \n",
-      "4337  161.20   0.00           26.20                  83.0            0.0   \n",
+      "      temperature_2m  ...  precipitation  wind_speed_10m  wind_direction_10m  \\\n",
+      "0              27.30  ...            0.0           11.70               314.0   \n",
+      "1              26.80  ...            0.0           13.20               307.0   \n",
+      "2              26.20  ...            0.0           15.80               323.0   \n",
+      "3              26.00  ...            0.0           15.10               331.0   \n",
+      "4              26.00  ...            0.0           13.70               322.0   \n",
+      "...              ...  ...            ...             ...                 ...   \n",
+      "4335           27.30  ...            0.0            4.80               243.0   \n",
+      "4336           40.09  ...            0.0            5.66               260.0   \n",
+      "4337           26.20  ...            0.0            4.30               275.0   \n",
+      "4338           26.20  ...            0.0            4.30               275.0   \n",
+      "4339           34.80  ...            0.0           20.70               247.0   \n",
       "\n",
-      "      wind_speed_10m  wind_direction_10m  surface_pressure  dew_point_2m  \\\n",
-      "0              11.70               314.0            1011.3          23.8   \n",
-      "1              13.20               307.0            1011.2          24.0   \n",
-      "2              15.80               323.0            1011.0          24.4   \n",
-      "3              15.10               331.0            1010.9          24.9   \n",
-      "4              13.70               322.0            1011.0          24.9   \n",
-      "...              ...                 ...               ...           ...   \n",
-      "4333             NaN                 NaN               NaN           NaN   \n",
-      "4334             NaN                 NaN               NaN           NaN   \n",
-      "4335            4.80               243.0            1005.6          23.7   \n",
-      "4336            5.66               260.0            1006.0           NaN   \n",
-      "4337            4.30               275.0            1003.9          23.1   \n",
+      "      surface_pressure  dew_point_2m  apparent_temperature  \\\n",
+      "0               1011.3          23.8                 31.50   \n",
+      "1               1011.2          24.0                 30.90   \n",
+      "2               1011.0          24.4                 30.30   \n",
+      "3               1010.9          24.9                 30.50   \n",
+      "4               1011.0          24.9                 30.60   \n",
+      "...                ...           ...                   ...   \n",
+      "4335            1005.6          23.7                 32.50   \n",
+      "4336            1006.0           NaN                 40.86   \n",
+      "4337            1003.9          23.1                 31.10   \n",
+      "4338            1003.9          23.1                 31.10   \n",
+      "4339            1004.6          23.1                 38.80   \n",
       "\n",
-      "      apparent_temperature  shortwave_radiation  et0_fao_evapotranspiration  \n",
-      "0                    31.50                  0.0                        0.03  \n",
-      "1                    30.90                  0.0                        0.02  \n",
-      "2                    30.30                  0.0                        0.02  \n",
-      "3                    30.50                  0.0                        0.00  \n",
-      "4                    30.60                  0.0                        0.00  \n",
-      "...                    ...                  ...                         ...  \n",
-      "4333                   NaN                  NaN                         NaN  \n",
-      "4334                   NaN                  NaN                         NaN  \n",
-      "4335                 32.50                  0.0                        0.00  \n",
-      "4336                 40.86                  0.0                        0.00  \n",
-      "4337                 31.10                  0.0                        0.00  \n",
+      "      shortwave_radiation  et0_fao_evapotranspiration        date      time  \n",
+      "0                     0.0                        0.03  2024-10-22  19:00:00  \n",
+      "1                     0.0                        0.02  2024-10-22  20:00:00  \n",
+      "2                     0.0                        0.02  2024-10-22  21:00:00  \n",
+      "3                     0.0                        0.00  2024-10-22  22:00:00  \n",
+      "4                     0.0                        0.00  2024-10-22  23:00:00  \n",
+      "...                   ...                         ...         ...       ...  \n",
+      "4335                  0.0                        0.00  2025-04-25  19:00:00  \n",
+      "4336                  0.0                        0.00  2025-04-26  07:37:41  \n",
+      "4337                  0.0                        0.00  2025-04-26  07:57:37  \n",
+      "4338                  0.0                        0.00  2025-04-26  11:56:22  \n",
+      "4339                847.0                        0.72  2025-04-27  10:21:15  \n",
       "\n",
-      "[4338 rows x 20 columns]\n"
+      "[4340 rows x 21 columns]\n"
      ]
     }
    ],
