--- a/model_train.ipynb
+++ b/model_train.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0ed6cc23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import boto3\n",
     "import pandas as pd\n",
@@ -17,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a69ebbd1",
    "metadata": {},
    "outputs": [
@@ -27,7 +38,6 @@
      "text": [
       "index                         0\n",
       "aqi_index                     0\n",
-      "aqi_timestamp                 0\n",
       "co                            0\n",
       "no                            0\n",
       "no2                           0\n",
@@ -46,6 +56,10 @@
       "apparent_temperature          0\n",
       "shortwave_radiation           0\n",
       "et0_fao_evapotranspiration    0\n",
+      "year                          0\n",
+      "month                         0\n",
+      "day                           0\n",
+      "hour                          0\n",
       "dtype: int64\n"
      ]
     }
@@ -77,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "0cce67d9",
    "metadata": {},
    "outputs": [],
@@ -85,22 +99,6 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Assuming df is already loaded\n",
-    "# Step 1: Convert datetime columns\n",
-    "df[\"aqi_timestamp\"] = pd.to_datetime(df[\"aqi_timestamp\"], errors=\"coerce\")\n",
-    "\n",
-    "\n",
-    "# Step 2: Extract datetime features\n",
-    "df[\"aqi_year\"] = df[\"aqi_timestamp\"].dt.year\n",
-    "df[\"aqi_month\"] = df[\"aqi_timestamp\"].dt.month\n",
-    "df[\"aqi_day\"] = df[\"aqi_timestamp\"].dt.day\n",
-    "df[\"aqi_hour\"] = df[\"aqi_timestamp\"].dt.hour\n",
-    "df[\"aqi_minute\"] = df[\"aqi_timestamp\"].dt.minute\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Step 3: Drop original datetime columns\n",
-    "df = df.drop(columns=[\"aqi_timestamp\"], errors=\"ignore\")\n",
     "\n",
     "# Step 4: Define target and features\n",
     "target = df[\"aqi_index\"]\n",
@@ -115,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "414706e3",
    "metadata": {},
    "outputs": [],
@@ -132,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "c81e2291",
    "metadata": {},
    "outputs": [
@@ -149,9 +147,9 @@
      "output_type": "stream",
      "text": [
       "Model: Random_Forest\n",
-      "  RMSE: 0.042412424872746865\n",
-      "  MAE: 0.006712250331479037\n",
-      "  R²: 0.9979231555689491\n",
+      "  RMSE: 0.041723806218533374\n",
+      "  MAE: 0.0055189928907690535\n",
+      "  R²: 0.9979469336148679\n",
       "\n"
      ]
     },
@@ -172,19 +170,19 @@
      "output_type": "stream",
      "text": [
       "Model: Gradient_Boosting\n",
-      "  RMSE: 0.04659467797520641\n",
-      "  MAE: 0.014019899770630643\n",
-      "  R²: 0.9974933691016691\n",
+      "  RMSE: 0.041837572780225464\n",
+      "  MAE: 0.013599354000272186\n",
+      "  R²: 0.9979357223300902\n",
       "\n",
       "Model: Linear_Regression\n",
-      "  RMSE: 0.5732028490884581\n",
-      "  MAE: 0.45661327275031893\n",
-      "  R²: 0.6206549334666698\n",
+      "  RMSE: 0.5799242060588519\n",
+      "  MAE: 0.4587683690465528\n",
+      "  R²: 0.6033772456886413\n",
       "\n",
       "Model: Ridge_Regression\n",
-      "  RMSE: 0.5750599692537701\n",
-      "  MAE: 0.4582451847284113\n",
-      "  R²: 0.6181928709995748\n",
+      "  RMSE: 0.5803085045180729\n",
+      "  MAE: 0.46275598313398963\n",
+      "  R²: 0.6028514114007317\n",
       "\n"
      ]
     },
@@ -201,9 +199,9 @@
      "output_type": "stream",
      "text": [
       "Model: Support_Vector_Regressor\n",
-      "  RMSE: 0.4289844237705251\n",
-      "  MAE: 0.2966944096660549\n",
-      "  R²: 0.7875284400550668\n",
+      "  RMSE: 0.4222891958527931\n",
+      "  MAE: 0.29067855253208236\n",
+      "  R²: 0.789692338902556\n",
       "\n"
      ]
     },
@@ -220,9 +218,9 @@
      "output_type": "stream",
      "text": [
       "Model: Neural_Network\n",
-      "  RMSE: 2.6272656508629004\n",
-      "  MAE: 1.9501080885467714\n",
-      "  R²: -6.969402014984009\n",
+      "  RMSE: 2.6379126123554837\n",
+      "  MAE: 2.0391831233632542\n",
+      "  R²: -7.206461976423569\n",
       "\n",
       "\n",
       " Best model: Random_Forest (RMSE = 0.04)\n",
@@ -230,12 +228,12 @@
       "\n",
       " Summary of Model Performance:\n",
       "                      Model      RMSE       MAE        R²\n",
-      "0             Random_Forest  0.042412  0.006712  0.997923\n",
-      "1         Gradient_Boosting  0.046595  0.014020  0.997493\n",
-      "2         Linear_Regression  0.573203  0.456613  0.620655\n",
-      "3          Ridge_Regression  0.575060  0.458245  0.618193\n",
-      "4  Support_Vector_Regressor  0.428984  0.296694  0.787528\n",
-      "5            Neural_Network  2.627266  1.950108 -6.969402\n"
+      "0             Random_Forest  0.041724  0.005519  0.997947\n",
+      "1         Gradient_Boosting  0.041838  0.013599  0.997936\n",
+      "2         Linear_Regression  0.579924  0.458768  0.603377\n",
+      "3          Ridge_Regression  0.580309  0.462756  0.602851\n",
+      "4  Support_Vector_Regressor  0.422289  0.290679  0.789692\n",
+      "5            Neural_Network  2.637913  2.039183 -7.206462\n"
      ]
     }
    ],
