--- a/model_train.ipynb
+++ b/model_train.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "414706e3",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,8 @@
     "from sklearn.neural_network import MLPRegressor\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import joblib"
+    "import joblib\n",
+    "import numpy as np"
    ]
   },
   {
@@ -260,7 +261,7 @@
     "    model.fit(X_train, y_train)\n",
     "    y_pred = model.predict(X_test)\n",
     "\n",
-    "    rmse = mean_squared_error(y_test, y_pred, squared=False)\n",
+    "    rmse = np.sqrt(mean_squared_error(y_test, y_pred, squared=False))\n",
     "    mae = mean_absolute_error(y_test, y_pred)\n",
     "    r2 = r2_score(y_test, y_pred)\n",
     "\n",
