--- a/model_train.ipynb
+++ b/model_train.ipynb
@@ -261,7 +261,7 @@
     "    model.fit(X_train, y_train)\n",
     "    y_pred = model.predict(X_test)\n",
     "\n",
-    "    rmse = np.sqrt(mean_squared_error(y_test, y_pred, squared=False))\n",
+    "    rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
     "    mae = mean_absolute_error(y_test, y_pred)\n",
     "    r2 = r2_score(y_test, y_pred)\n",
     "\n",
