--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "396d8752",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
     "model.fit(X_train_scaled, y_train)\n",
     "y_pred = model.predict(X_test_scaled)\n",
     "\n",
-    "rmse = mean_squared_error(y_test, y_pred, squared=False)\n",
+    "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
     "mae = mean_absolute_error(y_test, y_pred)\n",
     "r2 = r2_score(y_test, y_pred)\n",
     "\n",
