--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -3,57 +3,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "396d8752",
+   "id": "9461041c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data fetched successfully from AWS S3!\n",
-      "Model loaded successfully from AWS S3!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model performance on test dataset:\n",
-      "  RMSE: 0.04267408896725668\n",
-      "  MAE: 0.005880291497932563\n",
-      "  R²: 0.9978325472035963\n",
+      "Model Performance:\n",
+      "  RMSE: 0.0404212698933313\n",
+      "  MAE: 0.005516206758883075\n",
+      "  R²: 0.9980553518347294\n",
+      "\n",
       "Predicted AQI for the next 3 days:\n",
       "         Date  Predicted_AQI\n",
-      "0  2025-04-28            2.0\n",
-      "1  2025-04-29            2.0\n",
-      "2  2025-04-30            2.0\n",
-      "Retrained model saved to S3.\n"
+      "0  2025-04-29            4.0\n",
+      "1  2025-04-30            4.0\n",
+      "2  2025-05-01            4.0\n",
+      "\n",
+      "Top 10 most important features:\n",
+      "                       Feature  Importance\n",
+      "6                        pm2_5    0.891502\n",
+      "7                         pm10    0.088905\n",
+      "4                           o3    0.016940\n",
+      "22                        hour    0.000810\n",
+      "9               temperature_2m    0.000389\n",
+      "18  et0_fao_evapotranspiration    0.000243\n",
+      "0                        index    0.000233\n",
+      "17         shortwave_radiation    0.000199\n",
+      "10        relative_humidity_2m    0.000178\n",
+      "15                dew_point_2m    0.000147\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import boto3\n",
-    "import joblib\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from datetime import datetime, timedelta\n",
     "from io import BytesIO\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "import joblib\n",
+    "import boto3\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "# Load environment variables from .env file\n",
+    "# Load your datasets\n",
     "load_dotenv()\n",
     "# --- Step 1: Load Data from AWS S3 ---\n",
     "# Your AWS credentials and bucket info\n",
@@ -71,38 +76,42 @@
     "\n",
     "# Read CSV file from S3\n",
     "obj = s3.get_object(Bucket=bucket_name, Key=data_key)\n",
-    "data = pd.read_csv(obj['Body'])\n",
+    "df = pd.read_csv(obj['Body'])\n",
+    "# Process date columns\n",
+    "df['date'] = pd.to_datetime(df[['year', 'month', 'day']])\n",
+    "df = df.dropna(subset=['aqi_index'])  # Remove rows with missing AQI\n",
     "\n",
-    "print(\"Data fetched successfully from AWS S3!\")\n",
+    "# Extract features and target\n",
+    "target_column = 'aqi_index'\n",
+    "date_columns = ['year', 'month', 'day', 'hour']\n",
+    "features = [col for col in df.columns if col != target_column and col != 'date']\n",
     "\n",
-    "# Separate features and target\n",
-    "target = data[\"aqi_index\"]\n",
-    "features = data.drop(columns=[\"aqi_index\"])\n",
+    "X = df[features]\n",
+    "y = df[target_column]\n",
     "\n",
-    "# --- Step 3: Train-Test Split ---\n",
-    "X_train, X_test, y_train, y_test = train_test_split(features, target, test_size=0.2, random_state=42)\n",
+    "# Split data for training and testing\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# --- Step 4: Apply Feature Scaling ---\n",
-    "scaler = MinMaxScaler()\n",
+    "# Train the model\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Scale features\n",
+    "scaler = StandardScaler()\n",
     "X_train_scaled = scaler.fit_transform(X_train)\n",
     "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
-    "# --- Step 5: Load Best Model from S3 ---\n",
-    "model_key = 'models/best_model.pkl'  # replace with your model path\n",
-    "model_obj = s3.get_object(Bucket=bucket_name, Key=model_key)\n",
-    "model = joblib.load(BytesIO(model_obj['Body'].read()))\n",
-    "\n",
-    "print(\"Model loaded successfully from AWS S3!\")\n",
-    "\n",
-    "# --- Step 6: Retrain the Model ---\n",
+    "# Train model\n",
+    "model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
     "model.fit(X_train_scaled, y_train)\n",
-    "y_pred = model.predict(X_test_scaled)\n",
     "\n",
+    "# Evaluate the model\n",
+    "y_pred = model.predict(X_test_scaled)\n",
     "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
     "mae = mean_absolute_error(y_test, y_pred)\n",
     "r2 = r2_score(y_test, y_pred)\n",
     "\n",
-    "print(\"Model performance on test dataset:\")\n",
+    "print(\"Model Performance:\")\n",
     "print(f\"  RMSE: {rmse}\")\n",
     "print(f\"  MAE: {mae}\")\n",
     "print(f\"  R²: {r2}\")\n",
@@ -111,33 +120,106 @@
     "start_date = datetime.now().replace(hour=0, minute=0, second=0, microsecond=0) + timedelta(days=1)\n",
     "future_dates = [start_date + timedelta(days=i) for i in range(3)]\n",
     "\n",
+    "# Create base future features with date components\n",
     "future_features = pd.DataFrame({\n",
-    "    \"date_year\": [d.year for d in future_dates],\n",
-    "    \"date_month\": [d.month for d in future_dates],\n",
-    "    \"date_day\": [d.day for d in future_dates],\n",
-    "    \"date_hour\": [12] * 3,\n",
-    "    \"date_minute\": [0] * 3,\n",
-    "    \"date_timestamp\": [int(d.timestamp()) for d in future_dates]\n",
+    "    \"year\": [d.year for d in future_dates],\n",
+    "    \"month\": [d.month for d in future_dates],\n",
+    "    \"day\": [d.day for d in future_dates],\n",
+    "    \"hour\": [12] * 3,  # Prediction for noon each day\n",
     "})\n",
     "\n",
-    "# Add missing features\n",
+    "# Find most recent data in April 2025\n",
+    "recent_data = df[(df['year'] == 2025) & (df['month'] == 4)]\n",
+    "\n",
+    "# If we have April 2025 data, use it for predictions\n",
+    "if len(recent_data) > 0:\n",
+    "    # Sort by date to get most recent entries\n",
+    "    recent_data = recent_data.sort_values(['year', 'month', 'day', 'hour'])\n",
+    "    \n",
+    "    # Get latest 72 hours (3 days) of data\n",
+    "    recent_data = recent_data.tail(72)\n",
+    "    \n",
+    "    # Calculate average value for each numerical feature except date features\n",
+    "    numeric_features = [col for col in features if col not in date_columns]\n",
+    "    recent_averages = recent_data[numeric_features].mean().to_dict()\n",
+    "    \n",
+    "    # Apply these values to future predictions\n",
+    "    for feature, value in recent_averages.items():\n",
+    "        future_features[feature] = value\n",
+    "else:\n",
+    "    # If no recent data, find data from similar season/month from previous years\n",
+    "    similar_season_data = df[df['month'] == 4]  # April data from any year\n",
+    "    \n",
+    "    if len(similar_season_data) > 0:\n",
+    "        # Calculate averages for similar season\n",
+    "        numeric_features = [col for col in features if col not in date_columns]\n",
+    "        season_averages = similar_season_data[numeric_features].mean().to_dict()\n",
+    "        \n",
+    "        # Apply these values to future predictions\n",
+    "        for feature, value in season_averages.items():\n",
+    "            future_features[feature] = value\n",
+    "    else:\n",
+    "        # Fallback: use most recent data from any month\n",
+    "        recent_any = df.sort_values(['year', 'month', 'day']).tail(72)\n",
+    "        numeric_features = [col for col in features if col not in date_columns]\n",
+    "        any_averages = recent_any[numeric_features].mean().to_dict()\n",
+    "        \n",
+    "        # Apply these values to future predictions\n",
+    "        for feature, value in any_averages.items():\n",
+    "            future_features[feature] = value\n",
+    "\n",
+    "# Adjust some features based on forecasted weather patterns (simplified)\n",
+    "# For example, consecutive days often show patterns\n",
+    "for i, date in enumerate(future_dates):\n",
+    "    if i > 0:  # Skip the first day\n",
+    "        # Add small variations to simulate weather changes\n",
+    "        for feature in ['temperature_2m', 'relative_humidity_2m', 'dew_point_2m', 'wind_speed_10m', 'wind_direction_10m', 'surface_pressure']:\n",
+    "            if feature in future_features.columns:\n",
+    "                # Add +/- 5% random variation\n",
+    "                variation = np.random.uniform(-0.05, 0.05)\n",
+    "                future_features.loc[i, feature] = future_features.loc[i-1, feature] * (1 + variation)\n",
+    "\n",
+    "# Make sure all required columns are present\n",
     "required_columns = X_train.columns.tolist()\n",
     "for col in required_columns:\n",
     "    if col not in future_features.columns:\n",
-    "        future_features[col] = 0\n",
+    "        # If a column is missing, use the mean from training data\n",
+    "        if col in X_train.columns:\n",
+    "            future_features[col] = X_train[col].mean()\n",
+    "        else:\n",
+    "            future_features[col] = 0\n",
+    "\n",
+    "# Ensure columns are in the right order\n",
     "future_features = future_features[required_columns]\n",
     "\n",
+    "# Scale features and predict\n",
     "future_scaled = scaler.transform(future_features)\n",
     "predicted_aqi = model.predict(future_scaled)\n",
     "\n",
+    "# Display results\n",
     "prediction_results = pd.DataFrame({\n",
     "    \"Date\": [d.strftime(\"%Y-%m-%d\") for d in future_dates],\n",
     "    \"Predicted_AQI\": np.round(predicted_aqi, 2)\n",
     "})\n",
     "\n",
-    "print(\"Predicted AQI for the next 3 days:\")\n",
+    "print(\"\\nPredicted AQI for the next 3 days:\")\n",
     "print(prediction_results)\n",
     "\n",
+    "# Optional: Analysis of feature importance to understand the model\n",
+    "feature_importance = pd.DataFrame({\n",
+    "    'Feature': X_train.columns,\n",
+    "    'Importance': model.feature_importances_\n",
+    "}).sort_values('Importance', ascending=False)\n",
+    "\n",
+    "print(\"\\nTop 10 most important features:\")\n",
+    "print(feature_importance.head(10))\n",
+    "\n",
+    "# --- Optional: Save retrained model back to S3 ---\n",
+    "model_buffer = BytesIO()\n",
+    "joblib.dump(model, model_buffer)\n",
+    "model_buffer.seek(0)\n",
+    "\n",
+    "# Uncomment if you have S3 access\n",
     "# --- Optional: Save retrained model back to S3 ---\n",
     "model_buffer = BytesIO()\n",
     "joblib.dump(model, model_buffer)\n",
@@ -149,8 +231,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "49463e55",
+   "execution_count": null,
+   "id": "773da10b",
    "metadata": {},
    "outputs": [],
    "source": [
