--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9461041c",
    "metadata": {},
    "outputs": [
@@ -32,18 +32,9 @@
       "0                        index    0.000233\n",
       "17         shortwave_radiation    0.000199\n",
       "10        relative_humidity_2m    0.000178\n",
-      "15                dew_point_2m    0.000147\n"
+      "15                dew_point_2m    0.000147\n",
+      "Retrained model saved to S3.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -193,17 +184,22 @@
     "future_features = future_features[required_columns]\n",
     "\n",
     "# Scale features and predict\n",
+    "# Scale features and predict\n",
     "future_scaled = scaler.transform(future_features)\n",
     "predicted_aqi = model.predict(future_scaled)\n",
+    "\n",
+    "# NO inverse transform needed\n",
+    "predictions = predicted_aqi\n",
     "\n",
     "# Display results\n",
     "prediction_results = pd.DataFrame({\n",
     "    \"Date\": [d.strftime(\"%Y-%m-%d\") for d in future_dates],\n",
-    "    \"Predicted_AQI\": np.round(predicted_aqi, 2)\n",
+    "    \"Predicted_AQI\": np.round(predictions, 2)\n",
     "})\n",
     "\n",
     "print(\"\\nPredicted AQI for the next 3 days:\")\n",
     "print(prediction_results)\n",
+    "\n",
     "\n",
     "# Optional: Analysis of feature importance to understand the model\n",
     "feature_importance = pd.DataFrame({\n",
