--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -10,29 +10,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Loaded pre-trained model from S3\n",
       "Model Performance:\n",
-      "  RMSE: 0.0404212698933313\n",
-      "  MAE: 0.005516206758883075\n",
-      "  R²: 0.9980553518347294\n",
+      "  Target: aqi_index\n",
+      "    RMSE: 2.0081223477374364\n",
+      "    MAE: 1.8101914399194654\n",
+      "    R²: -3.7995604949847666\n",
+      "  Target: Calculated_AQI\n",
+      "    RMSE: 124.77295563352484\n",
+      "    MAE: 78.74878941503074\n",
+      "    R²: -0.4680402598736384\n",
       "\n",
-      "Predicted AQI for the next 3 days:\n",
-      "         Date  Predicted_AQI\n",
-      "0  2025-04-29            4.0\n",
-      "1  2025-04-30            4.0\n",
-      "2  2025-05-01            4.0\n",
+      "Predicted values for the next 3 days:\n",
+      "         Date  Predicted_AQI  Predicted_Calculated_AQI\n",
+      "0  2025-04-29           2.31                    177.63\n",
+      "1  2025-04-30           2.31                    177.63\n",
+      "2  2025-05-01           2.31                    177.63\n",
       "\n",
-      "Top 10 most important features:\n",
-      "                       Feature  Importance\n",
-      "6                        pm2_5    0.891502\n",
-      "7                         pm10    0.088905\n",
-      "4                           o3    0.016940\n",
-      "22                        hour    0.000810\n",
-      "9               temperature_2m    0.000389\n",
-      "18  et0_fao_evapotranspiration    0.000243\n",
-      "0                        index    0.000233\n",
-      "17         shortwave_radiation    0.000199\n",
-      "10        relative_humidity_2m    0.000178\n",
-      "15                dew_point_2m    0.000147\n",
+      "Top 10 most important features (from first target model):\n",
+      "                 Feature  Importance\n",
+      "6                  pm2_5    0.873170\n",
+      "7                   pm10    0.107621\n",
+      "4                     o3    0.016397\n",
+      "0                  index    0.001109\n",
+      "8                    nh3    0.000292\n",
+      "21                   day    0.000252\n",
+      "5                    so2    0.000236\n",
+      "3                    no2    0.000182\n",
+      "22                  hour    0.000169\n",
+      "10  relative_humidity_2m    0.000146\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Retrained model saved to S3.\n"
      ]
     }
@@ -70,44 +96,61 @@
     "df = pd.read_csv(obj['Body'])\n",
     "# Process date columns\n",
     "df['date'] = pd.to_datetime(df[['year', 'month', 'day']])\n",
-    "df = df.dropna(subset=['aqi_index'])  # Remove rows with missing AQI\n",
+    "df = df.dropna(subset=['aqi_index', 'Calculated_AQI'])  # Remove rows with missing target values\n",
     "\n",
-    "# Extract features and target\n",
-    "target_column = 'aqi_index'\n",
+    "# Extract features and targets\n",
+    "target_columns = ['aqi_index', 'Calculated_AQI']\n",
     "date_columns = ['year', 'month', 'day', 'hour']\n",
-    "features = [col for col in df.columns if col != target_column and col != 'date']\n",
+    "features = [col for col in df.columns if col not in target_columns and col != 'date']\n",
     "\n",
     "X = df[features]\n",
-    "y = df[target_column]\n",
+    "y = df[target_columns]\n",
     "\n",
     "# Split data for training and testing\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Train the model\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "# Scale features\n",
-    "scaler = StandardScaler()\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)\n",
-    "\n",
-    "# Train model\n",
-    "model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
-    "model.fit(X_train_scaled, y_train)\n",
+    "# --- Step 2: Load the pre-trained multioutput model ---\n",
+    "# Option 1: Load from S3\n",
+    "try:\n",
+    "    model_key = 'models/best_model.pkl'\n",
+    "    model_buffer = BytesIO()\n",
+    "    s3.download_fileobj(Bucket=bucket_name, Key=model_key, Fileobj=model_buffer)\n",
+    "    model_buffer.seek(0)\n",
+    "    model = joblib.load(model_buffer)\n",
+    "    print(\"Loaded pre-trained model from S3\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Could not load model from S3: {e}\")\n",
+    "    # Option 2: Train a new model\n",
+    "    print(\"Training a new model...\")\n",
+    "    from sklearn.ensemble import RandomForestRegressor\n",
+    "    from sklearn.multioutput import MultiOutputRegressor\n",
+    "    from sklearn.preprocessing import StandardScaler\n",
+    "    \n",
+    "    # Scale features\n",
+    "    scaler = StandardScaler()\n",
+    "    X_train_scaled = scaler.fit_transform(X_train)\n",
+    "    X_test_scaled = scaler.transform(X_test)\n",
+    "    \n",
+    "    # Train model\n",
+    "    model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "    model.fit(X_train_scaled, y_train)\n",
     "\n",
     "# Evaluate the model\n",
     "y_pred = model.predict(X_test_scaled)\n",
-    "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
-    "mae = mean_absolute_error(y_test, y_pred)\n",
-    "r2 = r2_score(y_test, y_pred)\n",
     "\n",
+    "# Calculate metrics for each target\n",
     "print(\"Model Performance:\")\n",
-    "print(f\"  RMSE: {rmse}\")\n",
-    "print(f\"  MAE: {mae}\")\n",
-    "print(f\"  R²: {r2}\")\n",
+    "for i, col in enumerate(target_columns):\n",
+    "    rmse = np.sqrt(mean_squared_error(y_test.iloc[:, i], y_pred[:, i]))\n",
+    "    mae = mean_absolute_error(y_test.iloc[:, i], y_pred[:, i])\n",
+    "    r2 = r2_score(y_test.iloc[:, i], y_pred[:, i])\n",
+    "    \n",
+    "    print(f\"  Target: {col}\")\n",
+    "    print(f\"    RMSE: {rmse}\")\n",
+    "    print(f\"    MAE: {mae}\")\n",
+    "    print(f\"    R²: {r2}\")\n",
     "\n",
-    "# --- Step 7: Predict AQI for Next 3 Days ---\n",
+    "# --- Step 3: Predict AQI for Next 3 Days ---\n",
     "start_date = datetime.now().replace(hour=0, minute=0, second=0, microsecond=0) + timedelta(days=1)\n",
     "future_dates = [start_date + timedelta(days=i) for i in range(3)]\n",
     "\n",
@@ -184,50 +227,55 @@
     "future_features = future_features[required_columns]\n",
     "\n",
     "# Scale features and predict\n",
-    "# Scale features and predict\n",
     "future_scaled = scaler.transform(future_features)\n",
-    "predicted_aqi = model.predict(future_scaled)\n",
-    "\n",
-    "# NO inverse transform needed\n",
-    "predictions = predicted_aqi\n",
+    "predictions = model.predict(future_scaled)\n",
     "\n",
     "# Display results\n",
     "prediction_results = pd.DataFrame({\n",
     "    \"Date\": [d.strftime(\"%Y-%m-%d\") for d in future_dates],\n",
-    "    \"Predicted_AQI\": np.round(predictions, 2)\n",
+    "    \"Predicted_AQI\": np.round(predictions[:, 0], 2),\n",
+    "    \"Predicted_Calculated_AQI\": np.round(predictions[:, 1], 2)\n",
     "})\n",
     "\n",
-    "print(\"\\nPredicted AQI for the next 3 days:\")\n",
+    "print(\"\\nPredicted values for the next 3 days:\")\n",
     "print(prediction_results)\n",
     "\n",
-    "\n",
     "# Optional: Analysis of feature importance to understand the model\n",
-    "feature_importance = pd.DataFrame({\n",
-    "    'Feature': X_train.columns,\n",
-    "    'Importance': model.feature_importances_\n",
-    "}).sort_values('Importance', ascending=False)\n",
-    "\n",
-    "print(\"\\nTop 10 most important features:\")\n",
-    "print(feature_importance.head(10))\n",
+    "if hasattr(model, 'feature_importances_'):\n",
+    "    feature_importance = pd.DataFrame({\n",
+    "        'Feature': X_train.columns,\n",
+    "        'Importance': model.feature_importances_,\n",
+    "    }).sort_values('Importance', ascending=False)\n",
+    "    \n",
+    "    print(\"\\nTop 10 most important features:\")\n",
+    "    print(feature_importance.head(10))\n",
+    "elif hasattr(model, 'estimators_'):\n",
+    "    # For MultiOutputRegressor, access the first estimator's feature importances\n",
+    "    estimator = model.estimators_[0]\n",
+    "    if hasattr(estimator, 'feature_importances_'):\n",
+    "        feature_importance = pd.DataFrame({\n",
+    "            'Feature': X_train.columns,\n",
+    "            'Importance': estimator.feature_importances_,\n",
+    "        }).sort_values('Importance', ascending=False)\n",
+    "        \n",
+    "        print(\"\\nTop 10 most important features (from first target model):\")\n",
+    "        print(feature_importance.head(10))\n",
     "\n",
     "# --- Optional: Save retrained model back to S3 ---\n",
     "model_buffer = BytesIO()\n",
     "joblib.dump(model, model_buffer)\n",
     "model_buffer.seek(0)\n",
     "\n",
-    "# Uncomment if you have S3 access\n",
-    "# --- Optional: Save retrained model back to S3 ---\n",
-    "model_buffer = BytesIO()\n",
-    "joblib.dump(model, model_buffer)\n",
-    "model_buffer.seek(0)\n",
+    "s3.upload_fileobj(model_buffer, Bucket=bucket_name, Key='models/retrained_multioutput_model.pkl')\n",
+    "print(\"Retrained model saved to S3.\")\n",
     "\n",
-    "s3.upload_fileobj(model_buffer, Bucket=bucket_name, Key='models/retrained_model.pkl')\n",
-    "print(\"Retrained model saved to S3.\")\n"
+    "# Save `prediction_results` to a file\n",
+    "prediction_results.to_pickle(\"prediction_results.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "773da10b",
    "metadata": {},
    "outputs": [],
@@ -235,6 +283,14 @@
     "# Save `prediction_results` to a file\n",
     "prediction_results.to_pickle(\"prediction_results.pkl\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a79f22f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
