--- a/model_train.ipynb
+++ b/model_train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "0ed6cc23",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "a69ebbd1",
    "metadata": {},
    "outputs": [
@@ -61,6 +61,7 @@
       "month                         0\n",
       "day                           0\n",
       "hour                          0\n",
+      "Calculated_AQI                0\n",
       "dtype: int64\n"
      ]
     }
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "0cce67d9",
    "metadata": {},
    "outputs": [],
@@ -102,19 +103,21 @@
     "\n",
     "\n",
     "# Step 4: Define target and features\n",
-    "target = df[\"aqi_index\"]\n",
-    "X = df.drop(columns=[\"aqi_index\"])\n",
+    "# Step 4: Define targets and features\n",
+    "target_columns = [\"aqi_index\", \"Calculated_AQI\"]\n",
+    "targets = df[target_columns]\n",
+    "X = df.drop(columns=target_columns)\n",
     "\n",
     "# Step 5: Final check for datetime columns\n",
     "X = X.select_dtypes(exclude=[\"datetime64[ns]\"])\n",
     "\n",
     "# Step 6: Split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, target, test_size=0.2, random_state=42)\n"
+    "X_train, X_test, y_train, y_test = train_test_split(X, targets, test_size=0.2, random_state=42)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "414706e3",
    "metadata": {},
    "outputs": [],
@@ -132,15 +135,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c81e2291",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Random_Forest...\n",
+      "  Target: aqi_index\n",
+      "    RMSE: 0.3251133628643251\n",
+      "    MAE: 0.20052905399796558\n",
+      "    R²: 0.8741970653873768\n",
+      "  Target: Calculated_AQI\n",
+      "    RMSE: 7.3012199883308915\n",
+      "    MAE: 1.6130456403737168\n",
+      "    R²: 0.9949732428020813\n",
+      "  Average RMSE: 3.8131666755976084\n",
+      "\n",
+      "Training Gradient_Boosting...\n",
+      "  Target: aqi_index\n",
+      "    RMSE: 0.057114738483790624\n",
+      "    MAE: 0.01719769675896231\n",
+      "    R²: 0.9961174458941501\n",
+      "  Target: Calculated_AQI\n",
+      "    RMSE: 6.021153129142665\n",
+      "    MAE: 3.1203345172653214\n",
+      "    R²: 0.9965813362665047\n",
+      "  Average RMSE: 3.039133933813228\n",
+      "\n",
+      "Training Linear_Regression...\n",
+      "  Target: aqi_index\n",
+      "    RMSE: 0.5878464857987662\n",
+      "    MAE: 0.47073217604526535\n",
+      "    R²: 0.5887092104702165\n",
+      "  Target: Calculated_AQI\n",
+      "    RMSE: 84.24911700233025\n",
+      "    MAE: 62.0492469971663\n",
+      "    R²: 0.33068931851285344\n",
+      "  Average RMSE: 42.41848174406451\n",
+      "\n",
+      "Training Ridge_Regression...\n",
+      "  Target: aqi_index\n",
+      "    RMSE: 0.5899124503583473\n",
+      "    MAE: 0.4741457893723793\n",
+      "    R²: 0.5858131981393443\n",
+      "  Target: Calculated_AQI\n",
+      "    RMSE: 84.5515455829137\n",
+      "    MAE: 62.44261376381183\n",
+      "    R²: 0.3258754522746524\n",
+      "  Average RMSE: 42.57072901663602\n",
+      "\n",
+      "Training SVR...\n",
+      "  Target: aqi_index\n",
+      "    RMSE: 0.42448992380889133\n",
+      "    MAE: 0.2935968714261188\n",
+      "    R²: 0.7855352586919919\n",
+      "  Target: Calculated_AQI\n",
+      "    RMSE: 93.77634628939605\n",
+      "    MAE: 52.74757334560757\n",
+      "    R²: 0.1707534834469493\n",
+      "  Average RMSE: 47.10041810660247\n",
+      "\n",
+      "Training Neural_Network...\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/neural_network/_multilayer_perceptron.py:690: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -148,106 +213,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: Random_Forest\n",
-      "  RMSE: 0.04092308519909528\n",
-      "  MAE: 0.005547425039859476\n",
-      "  R²: 0.998006767925658\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n",
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n",
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: Gradient_Boosting\n",
-      "  RMSE: 0.04902324226354709\n",
-      "  MAE: 0.016219469541633096\n",
-      "  R²: 0.9971396103807173\n",
-      "\n",
-      "Model: Linear_Regression\n",
-      "  RMSE: 0.5863630811478774\n",
-      "  MAE: 0.47001413438993267\n",
-      "  R²: 0.5907823397347722\n",
-      "\n",
-      "Model: Ridge_Regression\n",
-      "  RMSE: 0.5887669436017416\n",
-      "  MAE: 0.4734556347527061\n",
-      "  R²: 0.5874201929624898\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: Support_Vector_Regressor\n",
-      "  RMSE: 0.4243177828014738\n",
-      "  MAE: 0.2934807445092757\n",
-      "  R²: 0.7857091647799528\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: Neural_Network\n",
-      "  RMSE: 2.3805227812212597\n",
-      "  MAE: 1.7958743045027918\n",
-      "  R²: -5.744749356072322\n",
+      "  Target: aqi_index\n",
+      "    RMSE: 2.378264076384967\n",
+      "    MAE: 1.7940469739235767\n",
+      "    R²: -5.731956224492621\n",
+      "  Target: Calculated_AQI\n",
+      "    RMSE: 33.13262619148422\n",
+      "    MAE: 18.027772420892347\n",
+      "    R²: 0.8964836949409979\n",
+      "  Average RMSE: 17.755445133934593\n",
       "\n",
       "\n",
-      " Best model: Random_Forest (RMSE = 0.04)\n",
+      "Best model: Gradient_Boosting (Average RMSE = 3.04)\n",
       "Model uploaded to s3://my-feature-store-data/models/best_model.pkl\n",
       "\n",
-      " Summary of Model Performance:\n",
-      "                      Model      RMSE       MAE        R²\n",
-      "0             Random_Forest  0.040923  0.005547  0.998007\n",
-      "1         Gradient_Boosting  0.049023  0.016219  0.997140\n",
-      "2         Linear_Regression  0.586363  0.470014  0.590782\n",
-      "3          Ridge_Regression  0.588767  0.473456  0.587420\n",
-      "4  Support_Vector_Regressor  0.424318  0.293481  0.785709\n",
-      "5            Neural_Network  2.380523  1.795874 -5.744749\n"
+      "Summary of Model Performance:\n",
+      "               Model  RMSE_aqi_index  MAE_aqi_index  R²_aqi_index  \\\n",
+      "0      Random_Forest        0.325113       0.200529      0.874197   \n",
+      "1  Gradient_Boosting        0.057115       0.017198      0.996117   \n",
+      "2  Linear_Regression        0.587846       0.470732      0.588709   \n",
+      "3   Ridge_Regression        0.589912       0.474146      0.585813   \n",
+      "4                SVR        0.424490       0.293597      0.785535   \n",
+      "5     Neural_Network        2.378264       1.794047     -5.731956   \n",
+      "\n",
+      "   RMSE_Calculated_AQI  MAE_Calculated_AQI  R²_Calculated_AQI   Avg_RMSE  \n",
+      "0             7.301220            1.613046           0.994973   3.813167  \n",
+      "1             6.021153            3.120335           0.996581   3.039134  \n",
+      "2            84.249117           62.049247           0.330689  42.418482  \n",
+      "3            84.551546           62.442614           0.325875  42.570729  \n",
+      "4            93.776346           52.747573           0.170753  47.100418  \n",
+      "5            33.132626           18.027772           0.896484  17.755445  \n"
      ]
     }
    ],
    "source": [
-    "# ✅ Step 3: Define Models\n",
+    "# Import additional required libraries\n",
+    "from sklearn.multioutput import MultiOutputRegressor\n",
+    "\n",
+    "# ✅ Step 3: Define Models with MultiOutput capability\n",
     "models = {\n",
     "    \"Random_Forest\": RandomForestRegressor(n_estimators=300, max_depth=10, random_state=42),\n",
-    "    \"Gradient_Boosting\": GradientBoostingRegressor(n_estimators=300, max_depth=3, random_state=42),\n",
+    "    \"Gradient_Boosting\": MultiOutputRegressor(GradientBoostingRegressor(n_estimators=300, max_depth=3, random_state=42)),\n",
     "    \"Linear_Regression\": LinearRegression(),\n",
     "    \"Ridge_Regression\": Ridge(alpha=1.0),\n",
-    "    \"Support_Vector_Regressor\": SVR(),\n",
-    "    \"Neural_Network\": MLPRegressor(max_iter=200, random_state=42)\n",
+    "    \"SVR\": MultiOutputRegressor(SVR()),\n",
+    "    \"Neural_Network\": MultiOutputRegressor(MLPRegressor(max_iter=200, random_state=42))\n",
     "}\n",
     "\n",
     "# -----------------------\n",
@@ -255,39 +265,50 @@
     "results = []\n",
     "best_model = None\n",
     "best_model_name = None\n",
-    "best_rmse = float(\"inf\")\n",
+    "best_avg_rmse = float(\"inf\")\n",
     "\n",
     "for model_name, model in models.items():\n",
+    "    print(f\"Training {model_name}...\")\n",
     "    model.fit(X_train, y_train)\n",
     "    y_pred = model.predict(X_test)\n",
-    "\n",
-    "    rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
-    "    mae = mean_absolute_error(y_test, y_pred)\n",
-    "    r2 = r2_score(y_test, y_pred)\n",
-    "\n",
-    "    results.append({\n",
-    "        \"Model\": model_name,\n",
-    "        \"RMSE\": rmse,\n",
-    "        \"MAE\": mae,\n",
-    "        \"R²\": r2\n",
-    "    })\n",
-    "\n",
-    "    if rmse < best_rmse:\n",
-    "        best_rmse = rmse\n",
+    "    \n",
+    "    # Calculate metrics for each target\n",
+    "    model_results = {\"Model\": model_name}\n",
+    "    rmse_scores = []\n",
+    "    \n",
+    "    for i, col in enumerate(target_columns):\n",
+    "        rmse = np.sqrt(mean_squared_error(y_test.iloc[:, i], y_pred[:, i]))\n",
+    "        mae = mean_absolute_error(y_test.iloc[:, i], y_pred[:, i])\n",
+    "        r2 = r2_score(y_test.iloc[:, i], y_pred[:, i])\n",
+    "        \n",
+    "        rmse_scores.append(rmse)\n",
+    "        model_results[f\"RMSE_{col}\"] = rmse\n",
+    "        model_results[f\"MAE_{col}\"] = mae\n",
+    "        model_results[f\"R²_{col}\"] = r2\n",
+    "        \n",
+    "        print(f\"  Target: {col}\")\n",
+    "        print(f\"    RMSE: {rmse}\")\n",
+    "        print(f\"    MAE: {mae}\")\n",
+    "        print(f\"    R²: {r2}\")\n",
+    "    \n",
+    "    # Calculate average RMSE across all targets\n",
+    "    avg_rmse = np.mean(rmse_scores)\n",
+    "    model_results[\"Avg_RMSE\"] = avg_rmse\n",
+    "    results.append(model_results)\n",
+    "    \n",
+    "    print(f\"  Average RMSE: {avg_rmse}\\n\")\n",
+    "    \n",
+    "    if avg_rmse < best_avg_rmse:\n",
+    "        best_avg_rmse = avg_rmse\n",
     "        best_model = model\n",
     "        best_model_name = model_name\n",
     "\n",
-    "    print(f\"Model: {model_name}\")\n",
-    "    print(f\"  RMSE: {rmse}\")\n",
-    "    print(f\"  MAE: {mae}\")\n",
-    "    print(f\"  R²: {r2}\\n\")\n",
-    "\n",
     "# -----------------------\n",
-    "#  Step 5: Save Best Model Locally\n",
-    "print(f\"\\n Best model: {best_model_name} (RMSE = {best_rmse:.2f})\")\n",
+    "# Step 5: Save Best Model Locally\n",
+    "print(f\"\\nBest model: {best_model_name} (Average RMSE = {best_avg_rmse:.2f})\")\n",
     "joblib.dump(best_model, \"best_model.pkl\")\n",
     "\n",
-    "S3_KEY = \"models/best_model.pkl\"  # Example: \"models/best_model.pkl\"\n",
+    "S3_KEY = \"models/best_model.pkl\"\n",
     "\n",
     "# Upload\n",
     "s3.upload_file(\"best_model.pkl\", bucket_name, S3_KEY)\n",
@@ -296,9 +317,17 @@
     "# -----------------------\n",
     "# Step 7: Summary\n",
     "results_df = pd.DataFrame(results)\n",
-    "print(\"\\n Summary of Model Performance:\")\n",
+    "print(\"\\nSummary of Model Performance:\")\n",
     "print(results_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1580b5fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
